--- a/hoshigame/startscreen.html
+++ b/hoshigame/startscreen.html
@@ -18,7 +18,7 @@
     </div>
 
     <!-- Use any element to open the sidenav -->
-    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; More</span> 
+    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Rules &#038; Controls</span> 
     
     <h1>Hoshi</h1>
     
