--- a/hoshigame/startscreen.html
+++ b/hoshigame/startscreen.html
@@ -23,7 +23,7 @@
     <h1>Hoshi</h1>
     
     <div class="background"> </div>
-    <div class="div">Their once was long ago a child named Hoshi. Every night, they would diligently gaze at the night sky and revel under the thousands of lights hung in the sky.</div>
+    <div class="div">There once was a child named Hoshi. Every night, they would diligently gaze at the night sky and revel under the thousands of lights hung in the sky.</div>
     
     <div class="backgroundb"> </div>
     <div class="div">They also loved to fold paper hearts, as there was an old saying in the village that to replace the fallen stars from the sky, one must fold paper stars. So fold and fold Hoshi did.</div>
