--- a/hoshigame/startscreen.html
+++ b/hoshigame/startscreen.html
@@ -41,7 +41,7 @@
         <div id="boundaryMessage" class="hidden">
         
         <img id="x" src="imgs/x.png" alt="close" onclick="continueGame()">
-        <h1 id="message" class="titleText"></h1>
+        <h1 id="message" class="titleText">&nbsp;</h1>
         <p id="message2" class="titleText"></p>
         </div>
         
