--- a/chooseyourownadventure/index.html
+++ b/chooseyourownadventure/index.html
@@ -19,7 +19,8 @@ Select the adventure you&#39;d like to play through below.
 [[Code Green]]
 [[Code Brown]]
 [[Code Grey]]
-[[Code Black]]</tw-passagedata><tw-passagedata pid="2" name="Dress Code" tags="" position="32,250.5" size="100,100">Welcome to the dress code adventure!
+[[Code Black]]
+[[Code White]]</tw-passagedata><tw-passagedata pid="2" name="Dress Code" tags="" position="32,250.5" size="100,100">Welcome to the dress code adventure!
 
 [[Continue...-&gt;dress code 1]]</tw-passagedata><tw-passagedata pid="3" name="Code Red" tags="" position="433,367.5" size="100,100">Welcome to the Code Red adventure!
 
@@ -349,7 +350,49 @@ Thanks to you, they had information on both the person responsible, as well as d
 
 You decide that you’d best not point out the bag in front of the patient, so you leave the room, and shakily whisper to the nurses about what you’ve learned.
 
-(after:1s)[[[Continue...-&gt;Call the police! You&#39;re no bomb expert!]]]</tw-passagedata></tw-storydata>
+(after:1s)[[[Continue...-&gt;Call the police! You&#39;re no bomb expert!]]]</tw-passagedata><tw-passagedata pid="145" name="Code White" tags="" position="2880,240.5" size="100,100">Welcome to the Code White adventure!
+
+[[Continue...-&gt;code white 1]]</tw-passagedata><tw-passagedata pid="146" name="code white 1" tags="" position="2880,391.5" size="100,100">After following appropriate dress code attire and practicing healthy hand hygiene, you are now ready to start your shift at the hospital. As you turn the corner in your designated volunteering area of the day, you hear yelling coming from one of the patient rooms.
+(after:1s)[Do you knock on the door and check up on the patient? 
+
+[[Yes-&gt;white yes]]
+[[No-&gt;white no]]]</tw-passagedata><tw-passagedata pid="147" name="white yes" tags="" position="2805,541.5" size="100,100">You kindly knock on the door and notify Ms. Smith that you will be coming in for a check up.
+
+(after:1s)[[[Continue...-&gt;code white 2]]]</tw-passagedata><tw-passagedata pid="148" name="white no" tags="" position="2955,541.5" size="100,100">As an Island Health volunteer, you have a responsibility to maintain a safe environment for yourself, co-workers, and patients. Therefore, it would be in your best interest to investigate the situation. </tw-passagedata><tw-passagedata pid="149" name="code white 2" tags="" position="2805,691.5" size="100,100">As you walk into Ms. Smith’s room, you notice a man standing in front of her bed, raising his voice at her. Taking in the scene in front of you, you note that it is past visiting hours and you must make a decision.
+(after:1s)[What do you do next?
+
+[[Kindly interrupt the man, ask about the situation at hand and politely inform him that visiting hours are over]]
+[[Quietly shuffle out of the room as this seems like a personal issue]]]</tw-passagedata><tw-passagedata pid="150" name="Kindly interrupt the man, ask about the situation at hand and politely inform him that visiting hours are over" tags="" position="2805,841.5" size="100,100">You begin to approach Ms.Smith on her bed and announce that you are here, making rounds and checking if everything is going ok.
+
+(after:1s)[[[Continue...-&gt;code white 3]]]</tw-passagedata><tw-passagedata pid="151" name="Quietly shuffle out of the room as this seems like a personal issue" tags="" position="2925,841.5" size="100,100">As an Island Health volunteer, you have a responsibility to maintain a safe environment for yourself, co-workers, and patients. Therefore, it would be in your best interest to make sure the patient is safe before departing. </tw-passagedata><tw-passagedata pid="152" name="code white 3" tags="" position="2830,1005.5" size="100,100">While approaching Ms. Smith and announcing your appearance, you begin to notice that the man in the room has quieted down with your entrance. However, he clearly seems to be very agitated with your interruption. You go about inquiring upon Ms. Smith and how she is feeling when the man interrupts you and demands that you leave.
+(after:1s)[Turning to him you say:
+
+[[“I’m sorry sir but visiting hours have now ended, I will kindly have to ask you to leave.”]]
+[[“Stop yelling and get out, it’s time to leave.”]]]</tw-passagedata><tw-passagedata pid="153" name="“I’m sorry sir but visiting hours have now ended, I will kindly have to ask you to leave.”" tags="" position="2755,1155.5" size="100,100">Hearing this, the man explains that he is Ms. Smith’s landlord and is angry that she has not been in her home for a while and demands that she moves out. 
+
+(after:1s)[[[Continue...-&gt;code white 4]]]</tw-passagedata><tw-passagedata pid="154" name="“Stop yelling and get out, it’s time to leave.”" tags="" position="2905,1155.5" size="100,100">Hearing this, the man explodes and starts screaming and being extremely aggressive towards you. Please select a less violent approach to addressing the situation. </tw-passagedata><tw-passagedata pid="155" name="code white 4" tags="" position="2755,1305.5" size="100,100">You begin to explain that although this may be the case, as this is a hospital setting it is imperative that everyone remain calm and collected to not disturb other patients or people in the facility, and this issue should be dealt with at a later time as, again, visiting hours are over. 
+
+Hearing this, the man starts to once again raise his voice and starts yelling at you this time. He then proceeds to state that if Ms. Smith does not pay him right this minute he will shatter the vase he found on her bedside table on the floor.
+(after:1s)[In response you say:
+
+[[“I understand your frustration sir, however this is a conversation that needs to take place at another time and place.”]]
+[[“You won’t.”]]]</tw-passagedata><tw-passagedata pid="156" name="“I understand your frustration sir, however this is a conversation that needs to take place at another time and place.”" tags="" position="2680,1456.5" size="100,100">After your statement the landlord does not seem pleased however he does not seem as interested in throwing the vase.
+
+[[[Continue...-&gt;code white 5]]]</tw-passagedata><tw-passagedata pid="157" name="“You won’t.”" tags="" position="2830,1455.5" size="100,100">After this accusation the landlord becomes furious and does in fact break the vase, endangering you and Ms. Smith. Please select a less violent approach to addressing the situation. </tw-passagedata><tw-passagedata pid="158" name="code white 5" tags="" position="2680,1606.5" size="100,100">After a few more exchanges between you and the landlord you realize that he is still unwilling to leave and will not move from Ms. Smith’s room. At this point you are very worried for yours and Ms. Smith’s safety as you spot the man withdrawing a sharp object from his pocket. 
+(after:1s)[How do you respond?
+
+[[Withdraw from the situation and call for a Code White]]
+[[Try to wrestle out the object from the man]]]</tw-passagedata><tw-passagedata pid="159" name="Withdraw from the situation and call for a Code White" tags="" position="2605,1757.5" size="100,100">As a Island Health volunteer, when you encounter a visitor acting in a threatening manner you have a responsibility to withdraw from the situation and call Protection Services, Police or Code White Responders. This option is the correct choice. After your call make sure to inform employees and others in the vicinity of the situation (if applicable.)
+
+(after:1s)[[[Continue...-&gt;code white 6]]]</tw-passagedata><tw-passagedata pid="160" name="Try to wrestle out the object from the man" tags="" position="2755,1756.5" size="100,100">Confronting a violent visitor that could potentially cause a large amount of harm to yourself or others is not in your best interest. Please select a less violent approach to addressing the situation. </tw-passagedata><tw-passagedata pid="161" name="code white 6" tags="" position="2605,1907.5" size="100,100">Code White Responders arrive on the scene and you have successfully assured your safety as well as that of Ms. Smith’s. This crisis has been averted.
+(after:1s)[What do you do next?
+
+[[Inform your manager/supervisor of the situation and provide a formal report]]
+[[Nothing, everything is over now]]]</tw-passagedata><tw-passagedata pid="162" name="Inform your manager/supervisor of the situation and provide a formal report" tags="" position="2529,2057.5" size="100,100">You successfully contact your manager/supervisor and file a proper report.
+
+Now that this crisis has successfully and efficiently been dealt with, you are ready to continue with your volunteering tasks of the day. 
+
+(after:1s)[[[Continue...-&gt;finish]]]</tw-passagedata><tw-passagedata pid="163" name="Nothing, everything is over now" tags="" position="2680,2057.5" size="100,100">As an Island Health volunteer you have a responsibility to report to your manager/supervisor and file a formal report after any major incident has occurred. Please select another option. </tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">"use strict";var _slicedToArray=function(){return function(e,t){if(Array.isArray(e))return e;if(Symbol.iterator in Object(e))return function(e,t){var n=[],r=!0,i=!1,a=void 0;try{for(var o,s=e[Symbol.iterator]();!(r=(o=s.next()).done)&&(n.push(o.value),!t||n.length!==t);r=!0);}catch(e){i=!0,a=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw a}}return n}(e,t);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}!function(){
 /**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
