--- a/capstone/index.html
+++ b/capstone/index.html
@@ -41,19 +41,23 @@
               <div class="text-container">
                 <div class="text-box">
                     <div class="polaroid">
-                      <img id="pimg" src="imgs/06Rao_Sophie_GoldenHour_2021.jpg" alt="Aaron">
+                      <a href="works.html">
+                        <img id="pimg" src="imgs/06Rao_Sophie_GoldenHour_2021.jpg" alt="Aaron">
+                      </a>
                     </div>
                 </div>
                 <div class="text-box">
                     <div class="polaroid">
-                      <img id="pimg" src="imgs/gojooo.png" alt="gojo">
-
+                      <a href="works.html">
+                        <img id="pimg" src="imgs/gojooo.png" alt="gojo">
+                      </a>
                     </div>
                 </div>
                 <div class="text-box">
                     <div class="polaroid">
-                      <img id="pimg" src="imgs/08Rao_Sophie_Jasmine_2021.jpg" alt="Jasmine">
-
+                      <a href="works.html">
+                        <img id="pimg" src="imgs/08Rao_Sophie_Jasmine_2021.jpg" alt="Jasmine">
+                      </a>
                     </div>
                 </div>
               </div>
