--- a/capstone/contact.html
+++ b/capstone/contact.html
@@ -27,21 +27,21 @@
               <div class="text-container">
                 <div class="text-box">
                     <div class="sms">
-                      <a href="https://www.instagram.com/srchan.png/?hl=en">
+                      <a href="https://www.instagram.com/srchan.png/?hl=en" target="_blank">
                         <img id="pimg" src="imgs/insta.png" alt="instagram">
                       </a>
                     </div>
                 </div>
                 <div class="text-box">
                     <div class="sms">
-                      <a href="google.ca">
+                      <a href="https://www.redbubble.com/people/sr-sora/shop?asc=u" target="_blank">
                         <img id="pimg" src="imgs/rb.png" alt="red bubble">
                       </a>
                     </div>
                 </div>
                 <div class="text-box">
                     <div class="sms">
-                      <a href="https://srsora.tumblr.com/">
+                      <a href="https://srsora.tumblr.com/" target="_blank">
                         <img id="pimg" src="imgs/t.png" alt="tumblr">
                       </a>
                     </div>
@@ -50,7 +50,7 @@
             </div>
           </section>
           
-          <div class="background" id="background3"> </div>
+          <div class="background" id="background2"> </div>
 
           <div class="div" ></div>    
           <p style="text-align: center">&copy; Sophie R. 2022</p>
